src-client/styles.css
@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700&subset=latin-ext,vietnamese');

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    font-family: 'Nunito Sans', -apple-system,BlinkMacSystemFont,“Segoe UI”,Helvetica,Arial,sans-serif,“Apple Color Emoji”,“Segoe UI Emoji”,“Segoe UI Symbol”;
    font-size: 14px;
    line-height: 1.71;
    color: #333333;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: normal;
    text-align: left;
}

.toolbar {
  display: flex;
  flex-wrap: wrap;
}

.button--header {
  padding: 0;
  font-weight: bold;
  font-size: 22px;
  height: 31px;
  width: 40px;
  display: inline-block;
  box-sizing: border-box;
  line-height: 1.7;
  display: inline-flex;
  padding-left: 4px;
  line-height: 0;
}


.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 80px;
}

.controls-container {
  background-color: #f5f4f4;
    border-bottom: solid 1px #d1d5da;
    box-shadow: 0 1px 2px rgba(0,0,0,0.075);
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    padding: 5px;
    padding-bottom: 8px;
}

.ql-editor {
    margin-top: 20px;
    padding: 20px;
    width: 760px;
    min-height: 500px;
    border: 1px solid #efefef;
    background: white;
    font-family: 'Nunito Sans', -apple-system,BlinkMacSystemFont,“Segoe UI”,Helvetica,Arial,sans-serif,“Apple Color Emoji”,“Segoe UI Emoji”,“Segoe UI Symbol”;
    font-size: 16px;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    align-items: flex-start;
    justify-content: space-between;
}

.ql-editor p {
    width: 100%;
    margin: 0;
}

button {
    margin: 0 5px;
}

select {
    margin: 0 5px;
}

img {
    display: inline;
    border-radius: 4px;
}

.modal-tooltip {
    position: absolute;
    z-index: 2;
    background: rgba(255, 255, 255, 0.8);
    border: rgb(134, 161, 187) solid 1px;
    border-radius: 4px;
    padding: 5px;
}


.ql-cpay-blockquote {
    width: 100%;    
    background: rgb(242, 242, 242);
    border-left: 5px solid rgb(222, 222, 222);
    padding: 5px;
    padding-left: 15px;
    margin: 10px;
    width: 100%;
}


.ql-cpay-button-container {
    width: 100%;
    display: flex;
}

.toggler-wrapper {
  border-radius: 4px;
  margin-bottom: 6px;
}

.ql-editor h1,
.ql-editor h2,
.ql-editor h3 {
  width: 100%;
  margin: 0;
  color: #333;
  margin: 0;
  font-style: normal;
  font-stretch: normal;
  letter-spacing: normal
}

.ql-editor h1 {
  margin-bottom: 8px;
  text-align: center;
  font-size: 48px;
  line-height: 56px;
  font-weight: 200;
}
.ql-editor h2 {
  font-size: 40px;
  font-weight: 300;
  line-height: 48px;
  padding: 1.2rem 0 .4rem;
}

.ql-editor h3 {
  font-size: 32px;
  font-weight: 300;
  line-height: 48px;
  margin: 0;
  margin: 1rem 0 2.4rem;
}

.ql-editor p {
  width: 100%;
  margin-bottom: 0;
  padding: .2rem 0 .8rem;
  font-weight: 300;
  font-size: 18px;
  line-height: 1.71;
  color: #444;
  font-style: normal;
  font-stretch: normal;
  letter-spacing: normal
}

.ql-editor strong {
  color: #333;
  font-weight: 600;
}

.ql-editor a {
  text-decoration: none;
  color: #0275d8;
  font-size: 18px;
}

.ql-editor img {
  max-width: 100%;
  margin: 0;
  margin: 1rem 0 2.4rem;
  border: 1px solid #f0f0f0;
  border-radius: 4px;
}

.ql-editor hr {
  width: 100%;
  margin-top: 1rem; 
  margin-bottom: 1rem;
  border-top: 1px solid rgba(0,0,0,.1);
  border-bottom: none;
}

.ql-editor .ql-cpay-button {
  text-decoration: none;
  display: inline-block;
  border: 1px solid dodgerblue;
  background: dodgerblue;
  color: white;
  border-radius: 4px;
  padding: 5px;
  margin: 0 auto;
}

.ql-editor ul {
  list-style-type: circle;
}

.ql-editor ul,
.ql-editor ol {
  width: 100%;
  
}

.ql-editor li {
  padding-bottom: 1rem;
  margin-left: 2.4rem;
  font-weight: 300;
  font-size: 18px;
  color: #444;
}

.ql-video {
  width: 92%;
  height: 262px;
  margin: 1rem auto;
  border-radius: 4px;
}

.docs-index {
  margin-right: auto;
}

